app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 */

@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap");
.price-text {
  font-family: "Rubik", sans-serif !important;
  font-size: 2rem !important;
}
.hour-text {
  font-family: "Rubik", sans-serif !important;
  font-size: 1.5rem;
}
.small-text {
  font-size: 1rem;
}

$primary: #115571;
$danger: #d92e4f;
$warning: #f9f871;
$info: #18a2d9;
$success: #16d9a6;

@import "bootstrap";

